<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/despre_noi"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/about_nume_label"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:text="@string/nume_cabinet"
        android:padding="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/nume_icon"
        app:layout_constraintStart_toEndOf="@id/about_image"
        app:layout_constraintTop_toBottomOf="@+id/about_title" />

    <TextView
        android:id="@+id/about_nume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numele_cabinetului"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/about_nume_label"
        app:layout_constraintTop_toBottomOf="@id/about_title" />


    <ImageView
        android:id="@+id/about_descriere_label"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:text="@string/descriere"
        android:padding="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/descriere_icon"
        app:layout_constraintStart_toEndOf="@id/about_image"
        app:layout_constraintTop_toBottomOf="@+id/about_nume_label" />

    <TextView
        android:id="@+id/about_descriere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descrierea_cabinetului"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/about_descriere_label"
        app:layout_constraintTop_toBottomOf="@id/about_nume" />

    <ImageView
        android:id="@+id/about_adresa_label"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:text="@string/adresa"
        android:padding="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/adresa_icon"
        app:layout_constraintStart_toEndOf="@id/about_image"
        app:layout_constraintTop_toBottomOf="@+id/about_descriere_label" />

    <TextView
        android:id="@+id/about_adresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adresa_cabinetului"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/about_adresa_label"
        app:layout_constraintTop_toBottomOf="@id/about_descriere" />

    <ImageView
        android:id="@+id/about_contact_label"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:text="@string/contact"
        android:padding="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/contact_icon"
        app:layout_constraintEnd_toStartOf="@id/about_descriere"
        app:layout_constraintStart_toEndOf="@id/about_image"
        app:layout_constraintTop_toBottomOf="@+id/about_adresa_label" />

    <TextView
        android:id="@+id/about_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_contact_cabinet"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/about_contact_label"
        app:layout_constraintTop_toBottomOf="@id/about_adresa" />

    <ImageView
        android:id="@+id/about_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/fam_icon"
        app:layout_constraintTop_toBottomOf="@id/about_title"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>