<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lv_row_analize_bg_color">

    <ImageView
        android:id="@+id/lv_row_analize_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/analize"
        android:src="@drawable/welcome_analize_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lv_row_id_pacient"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/numele_pacientului"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toEndOf="@+id/lv_row_analize_iv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lv_row_id_pacient_completat"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/numele_pacientului_completat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/lv_row_id_pacient"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lv_row_id_asistent"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/numele_asistentului"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toEndOf="@+id/lv_row_analize_iv"
        app:layout_constraintTop_toBottomOf="@id/lv_row_id_pacient" />

    <TextView
        android:id="@+id/lv_row_id_asistent_completat"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/numele_asistentului_completat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lv_row_id_pacient"
        app:layout_constraintTop_toBottomOf="@id/lv_row_id_pacient_completat" />

    <TextView
        android:id="@+id/lv_row_test"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:text="@string/testul_efectuat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toEndOf="@+id/lv_row_analize_iv"
        app:layout_constraintTop_toBottomOf="@+id/lv_row_id_asistent" />

    <TextView
        android:id="@+id/lv_row_test_completat"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:text="@string/testul_efectuat_completat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/lv_row_test"
        app:layout_constraintTop_toBottomOf="@+id/lv_row_id_asistent_completat"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>