<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lv_row_consultatie_bg_color">

    <ImageView
        android:id="@+id/lv_row_consultatii_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/consultatii"
        android:src="@drawable/welcome_consultatii_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lv_row_consultatii_id_medic"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/numele_medicului"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toEndOf="@+id/lv_row_consultatii_iv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lv_row_consultatii_id_medic_completat"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/numele_medicului_completat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toEndOf="@+id/lv_row_consultatii_id_medic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lv_row_consultatii_id_pacient"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/numele_pacientului"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lv_row_consultatii_iv"
        app:layout_constraintTop_toBottomOf="@id/lv_row_consultatii_id_medic" />

    <TextView
        android:id="@+id/lv_row_consultatii_id_pacient_completat"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/numele_pacientului_completat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toEndOf="@+id/lv_row_consultatii_id_pacient"
        app:layout_constraintTop_toBottomOf="@id/lv_row_consultatii_id_medic_completat" />

    <TextView
        android:id="@+id/lv_row_consultatii_data_ora"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="188dp"
        android:layout_marginRight="188dp"
        android:text="@string/data_si_ora_consultatiei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toEndOf="@+id/lv_row_consultatii_iv"
        app:layout_constraintTop_toBottomOf="@+id/lv_row_consultatii_id_pacient" />

    <TextView
        android:id="@+id/lv_row_consultatii_data_ora_completat"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/data_si_ora_consultatiei_completate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lv_row_consultatii_data_ora"
        app:layout_constraintTop_toBottomOf="@+id/lv_row_consultatii_id_pacient_completat" />

    <TextView
        android:id="@+id/lv_row_consultatii_tip_consultatie"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tipul_consulta_iei"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lv_row_consultatii_iv"
        app:layout_constraintTop_toBottomOf="@+id/lv_row_consultatii_data_ora" />

    <TextView
        android:id="@+id/lv_row_consultatii_tip_consultatie_completat"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tipul_consultatiei_completat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lv_row_consultatii_tip_consultatie"
        app:layout_constraintTop_toBottomOf="@+id/lv_row_consultatii_data_ora_completat" />


</androidx.constraintlayout.widget.ConstraintLayout>